[package]
name = "rustyo"
version = "1.0.1"
edition = "2021"
authors = ["Oscar Scheepers <itrekr@oscar.cc>"]
description = "A simple radio that uses mpv to play radio streams from publically available internet radiostations."
license = "GPL-3.0-or-later"
repository = "https://github.com/itrekr/rustyo"

[dependencies]
csv = "1.3.0"
rand = "0.8.5"
